--- a/html/index.html
+++ b/html/index.html
@@ -6,5 +6,8 @@
 <body>
   <div id="image">
     http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js
+
   </div>
+  <script>
+</script>
 </body>
