--- a/html/index.html
+++ b/html/index.html
@@ -4,10 +4,7 @@
   <title> Kids Are Weird </title>
 </head>
 <body>
-  <div id="image">
-    http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js
-
-  </div>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
   <script>
 </script>
 </body>
