--- a/html/index.html
+++ b/html/index.html
@@ -4,8 +4,6 @@
   <title> Kids Are Weird </title>
 </head>
 <body>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
-  <script>
-  $("#yo").append("hey hey hey hey!!!!!");
-</script>
+  <div id="image">
+  </div>
 </body>
