--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
   </div>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
   <script>
-  $("#image").append(<image src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif"></image>)
+  $("#image").append('<img src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif"/>')
   </script>
+  <!-- $('#theDiv').prepend('<img id="theImg" src="theImg.png" />') -->
 </body>
